# contextual-semantic-hybrid-rag

./: .dockerignore  .env.example  .gitignore  AGENT_INSTRUCTIONS.md  AGNO_VS_LANGCHAIN.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_COMPARISON.md  PDF_SOURCES.md  README.md  SETUP.md  STRUCTURE.md  TELEGRAM.md  pyproject.toml  railway.json  whatsapp.py
.amazonq/agents/: default.json
docker/: entrypoint.sh
notebooks/: 01_agno_semantic.ipynb  02_enhanced_contextual.ipynb  prompt.txt
notebooks/agno/: 01_semantic_chunking.ipynb  02_contextual_chunking.ipynb
notebooks/langchain/: 01_contextual_chunking.ipynb
scripts/: README.md  download_pdfs.py  ingest_pdfs_agno.py  ingest_pdfs_enhanced.py  telegram_bot.py  test_connection.py  test_db.py  test_memory_isolation.py
scripts/agno/: ingest_contextual.py  ingest_semantic.py
scripts/langchain/: ingest_contextual.py
sql/: schema.sql
src/: config.py  logger.py  supabase_client.py
src/agents/: RAG_AGENT_INSTRUCTIONS.md  __init__.py  rag_agent.py  research_agent.py
src/api/: __init__.py  main.py
src/ingestion/: __init__.py  chunking.py  contextual_semantic_chunking.py  contextualizer.py  loaders.py
src/integrations/: telegram.py  whatsapp.py
src/integrations/telegram/: __init__.py  bot.py  polling.py  transcriber.py
src/rag/: __init__.py
src/rag/agno/: __init__.py  chunking.py  contextual_knowledge_base.py  knowledge_base.py  simple_chunking.py
src/rag/langchain/: __init__.py  chunking.py  contextual_knowledge_base.py
src/retrieval/: hybrid_search.py  reranker.py
src/storage/: __init__.py  agno_knowledge.py  contextual_agno_knowledge.py  enhanced_agno_knowledge.py  supabase_knowledge.py
