[tool.poetry]
name = "contextual-rag-agno-supabase"
version = "0.1.0"
description = "Advanced RAG with Semantic Chunking, Contextual Enhancement, and Hybrid Search"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
agno = "^2.4.3"
google-generativeai = "^0.8.3"
google-genai = "^1.0.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
pymupdf = "^1.24.0"
sqlalchemy = "^2.0.0"
pgvector = "^0.3.0"
chonkie = {extras = ["semantic"], version = "^0.3.0"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
