[tool.poetry]
name = "contextual-rag-agno-supabase"
version = "0.1.0"
description = "Advanced RAG with Semantic Chunking, Contextual Enhancement, and Hybrid Search"
authors = ["Your Name <vmharissis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
agno = "^2.4.3"
chonkie = {extras = ["semantic"], version = "^0.4.0"}
google-genai = "^1.0.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}
pymupdf = "^1.24.0"
sqlalchemy = "^2.0.0"
pgvector = "^0.3.0"
pypdf = "^5.1.0"
openai = "^1.0.0"
tiktoken = "^0.8.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
yfinance = "^1.1.0"
tavily-python = "^0.5.0"
whatsapp-python = "^4.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
